# APPD_sample

./: HH_manual_noise_coupling.py  README.md  particlecounts_1.00e-05_2.50e-01_10.npz  particlecounts_1.00e-05_5.00e-01_10.npz  particlecounts_1.00e-06_2.50e-01_10.npz  particlecounts_1.00e-06_5.00e-01_10.npz  run_many_HH_simulations.py
appd_cpp/minimal_HH_mat_example/: CMakeCache.txt  CMakeLists.txt  DockerFile  HH_init_cond.mat  Makefile  cmake_install.cmake  minimal_HH_neuron_example.cpp  particle_io.cpp  particle_method.cpp  particle_method.h  readme.md  runge_kutta_bogacki_shampine32.h  set_hh_eqn.h  text.txt
phase_reduction/: 5D_HH_manual_noise_coupling_phase_reduction.py  HH_manual_noise_coupling_phase_reduction.py  phasereduction-output_1.00e-05_2.50e-01_30.npz  phasereduction-output_1.00e-05_5.00e-01_30.npz  phasereduction-output_1.00e-06_2.50e-01_30.npz  phasereduction-output_1.00e-06_5.00e-01_30.npz  run_many_HH_simulations_phase_reduction.py
png_output/: particlecounts_1.00e-06_4.00e-01_100.npz
